--- a/www/index.html
+++ b/www/index.html
@@ -37,17 +37,13 @@ console.log({ fw: fw, fh: fh, f: f });
     //image.height *= f;
     var tw = image.width * f;
     var th = image.height * f;
-console.log({ tw: tw, th: th });
+    var ow = (can.width - tw) / 2;
+    var oh = (can.height - th) / 2;
+console.log({ tw: tw, th: th, ow: ow, oh: oh });
 console.log([ 'image1', image.width, image.height ]);
     var ctx = can.getContext('2d');
     ctx.clearRect(0, 0, can.width, can.height);
-    //can.width = image.width;
-    //can.height = image.height;
-    //ctx.drawImage(image, 0, 0, image.width, image.height);
-    //ctx.drawImage(image, 0, 0, can.width, can.height);
-    //ctx.drawImage(image, 0, 0);
-    ctx.drawImage(image, 0, 0, tw, th);
-    //ctx.drawImage(image, 0, 0, image.width, image.height, 0, 0, tw, th);
+    ctx.drawImage(image, ow, oh, tw, th);
 console.log([ 'can len', can.toDataURL().length ]);
   };
 console.log([ 'src len', ev.target.result.length ]);
